--- a/gtk-bookmarks-automount.desktop
+++ b/gtk-bookmarks-automount.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Gtk Bookmarks Automount Daemon
-Exec=/usr/bin/python /usr/bin/gtk-bookmarks-automount.py
+Exec=/usr/bin/python /usr/bin/gtk-bookmarks-automount
 OnlyShowIn=GNOME;Unity;
 NoDisplay=true
 StartupNotify=false
